--- a/html/contacto.html
+++ b/html/contacto.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reventa de Bombillas - Contacto</title>
+  <title>Iberdrola - Contacto</title>
   <link rel="stylesheet" href="../css/stylecontacto.css">
   <!-- Fuente Google Fonts -->
   <link rel="shortcut icon" href="../img/icono.png" type="image/x-icon">
@@ -36,7 +36,7 @@
   <!-- Sección de alerta -->
   <section id="alerta">
     <div class="alerta">
-      <p>¡Oferta del día! Bombillas LED al 20% de descuento.</p>
+      <p>¡Oferta del día! Bombillas LED al 30% de descuento.</p>
     </div>
   </section>
   
