--- a/html/productos.html
+++ b/html/productos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reventa de Bombillas - Productos</title>
+  <title>Iberdrola - Productos</title>
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/styleproducto.css">
@@ -64,17 +64,51 @@
   <!-- Sección de alerta -->
   <section id="alerta">
     <div class="alerta">
-      <p>¡Oferta del día! Bombillas LED al 20% de descuento.</p>
+      <p>¡Oferta del día! Bombillas LED al 30% de descuento.</p>
     </div>
   </section>
 
   <!-- Contenido principal -->
   <main>
-    <!-- Sección de bienvenida / hero -->
     <section id="inicio" class="hero">
       <h2>Bienvenido a la Tienda Online de Bombillas</h2>
       <p>Descubre la mejor calidad y precios para iluminar tu hogar y negocio.</p>
+      
+      <div class="factores-destacados">
+        <h3>¿Por qué elegir nuestras bombillas?</h3>
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>Factor</th>
+              <th>Descripción</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><strong>Eficiencia energética superior</strong></td>
+              <td>Las bombillas LED y solares consumen hasta un 80% menos energía que las bombillas tradicionales, reduciendo tus costos de electricidad y tu huella de carbono.</td>
+            </tr>
+            <tr>
+              <td><strong>Larga vida útil</strong></td>
+              <td>Gracias a su tecnología avanzada, nuestras bombillas tienen una vida útil mucho mayor, lo que minimiza la necesidad de reemplazos frecuentes y reduce la generación de residuos.</td>
+            </tr>
+            <tr>
+              <td><strong>Ecológicas y sostenibles</strong></td>
+              <td>Las bombillas LED son reciclables y libres de materiales tóxicos, mientras que nuestras bombillas solares aprovechan la energía del sol, reduciendo el uso de fuentes no renovables.</td>
+            </tr>
+            <tr>
+              <td><strong>Instalación sencilla</strong></td>
+              <td>La mayoría de nuestras bombillas son fáciles de instalar sin necesidad de modificaciones complejas, ahorrando tiempo y esfuerzo.</td>
+            </tr>
+            <tr>
+              <td><strong>Compromiso con el medio ambiente</strong></td>
+              <td>Con cada compra, contribuyes a la reducción de las emisiones de CO2 y ayudas a proteger el planeta para las generaciones futuras.</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </section>
+    
 
     <!-- Sección de productos -->
     <section id="productos" class="productos">
@@ -108,8 +142,30 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  Esta bombilla ofrece un bajo consumo de energía, ideal para mantener tu hogar iluminado de manera
-                  económica.
+                  1️⃣ Diseño y Desarrollo: Fabricada con materiales reciclables como vidrio y aluminio.
+Tecnología LED de alta eficiencia energética, consumiendo solo 3W.
+Diseño compacto y sin mercurio, reduciendo impacto ambiental.
+<br>
+<br>
+2️⃣ Fabricación: Uso eficiente de materiales para minimizar residuos.
+Menos emisiones de CO₂ en comparación con bombillas tradicionales.
+Producción optimizada para menor consumo energético.
+<br>
+<br>
+3️⃣ Uso y Aplicaciones:
+
+Iluminación en lámparas de escritorio, vitrinas, apliques de pared y techos.
+Bajo consumo de energía con una vida útil de hasta 25,000 horas.
+No genera calor excesivo, mejorando la seguridad.
+<br>
+<br>
+4️⃣ Reutilización y Reciclaje:
+Reutilización en lámparas compatibles tras revisiones técnicas.
+Separación de materiales: el vidrio y el aluminio pueden reciclarse.
+<br>
+<br>
+♻️ Menos residuos, menor impacto ambiental y un modelo de negocio más sostenible basado en la reutilización y el reciclaje.
+
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -146,7 +202,30 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  La bombilla de 8W es perfecta para oficinas o habitaciones, proporcionando una luz cálida y eficiente.
+                  1️⃣ Diseño y Desarrollo: Fabricada con materiales reciclables como vidrio y aluminio.
+Tecnología LED de alta eficiencia energética, consumiendo solo 3W.
+Diseño compacto y sin mercurio, reduciendo impacto ambiental.
+<br>
+<br>
+2️⃣ Fabricación: Uso eficiente de materiales para minimizar residuos.
+Menos emisiones de CO₂ en comparación con bombillas tradicionales.
+Producción optimizada para menor consumo energético.
+<br>
+<br>
+3️⃣ Uso y Aplicaciones:
+
+Iluminación en lámparas de escritorio, vitrinas, apliques de pared y techos.
+Bajo consumo de energía con una vida útil de hasta 25,000 horas.
+No genera calor excesivo, mejorando la seguridad.
+<br>
+<br>
+4️⃣ Reutilización y Reciclaje:
+Reutilización en lámparas compatibles tras revisiones técnicas.
+Separación de materiales: el vidrio y el aluminio pueden reciclarse.
+<br>
+<br>
+♻️ Menos residuos, menor impacto ambiental y un modelo de negocio más sostenible basado en la reutilización y el reciclaje.
+
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -183,7 +262,30 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  La bombilla de 10W es ideal para grandes espacios, con una luminosidad superior y bajo consumo.
+                  1️⃣ Diseño y Desarrollo: Fabricada con materiales reciclables como vidrio y aluminio.
+Tecnología LED de alta eficiencia energética, consumiendo solo 3W.
+Diseño compacto y sin mercurio, reduciendo impacto ambiental.
+<br>
+<br>
+2️⃣ Fabricación: Uso eficiente de materiales para minimizar residuos.
+Menos emisiones de CO₂ en comparación con bombillas tradicionales.
+Producción optimizada para menor consumo energético.
+<br>
+<br>
+3️⃣ Uso y Aplicaciones:
+
+Iluminación en lámparas de escritorio, vitrinas, apliques de pared y techos.
+Bajo consumo de energía con una vida útil de hasta 25,000 horas.
+No genera calor excesivo, mejorando la seguridad.
+<br>
+<br>
+4️⃣ Reutilización y Reciclaje:
+Reutilización en lámparas compatibles tras revisiones técnicas.
+Separación de materiales: el vidrio y el aluminio pueden reciclarse.
+<br>
+<br>
+♻️ Menos residuos, menor impacto ambiental y un modelo de negocio más sostenible basado en la reutilización y el reciclaje.
+
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -218,8 +320,30 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  La bombilla de 12W es ideal para salones y oficinas grandes, proporcionando una luz brillante y
-                  eficiente.
+                  1️⃣ Diseño y Desarrollo: Fabricada con materiales reciclables como vidrio y aluminio.
+Tecnología LED de alta eficiencia energética, consumiendo solo 3W.
+Diseño compacto y sin mercurio, reduciendo impacto ambiental.
+<br>
+<br>
+2️⃣ Fabricación: Uso eficiente de materiales para minimizar residuos.
+Menos emisiones de CO₂ en comparación con bombillas tradicionales.
+Producción optimizada para menor consumo energético.
+<br>
+<br>
+3️⃣ Uso y Aplicaciones:
+
+Iluminación en lámparas de escritorio, vitrinas, apliques de pared y techos.
+Bajo consumo de energía con una vida útil de hasta 25,000 horas.
+No genera calor excesivo, mejorando la seguridad.
+<br>
+<br>
+4️⃣ Reutilización y Reciclaje:
+Reutilización en lámparas compatibles tras revisiones técnicas.
+Separación de materiales: el vidrio y el aluminio pueden reciclarse.
+<br>
+<br>
+♻️ Menos residuos, menor impacto ambiental y un modelo de negocio más sostenible basado en la reutilización y el reciclaje.
+
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -254,7 +378,30 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  Esta bombilla es ideal para salones grandes y espacios comerciales, garantizando máxima eficiencia.
+                  1️⃣ Diseño y Desarrollo: Fabricada con materiales reciclables como vidrio y aluminio.
+Tecnología LED de alta eficiencia energética, consumiendo solo 3W.
+Diseño compacto y sin mercurio, reduciendo impacto ambiental.
+<br>
+<br>
+2️⃣ Fabricación: Uso eficiente de materiales para minimizar residuos.
+Menos emisiones de CO₂ en comparación con bombillas tradicionales.
+Producción optimizada para menor consumo energético.
+<br>
+<br>
+3️⃣ Uso y Aplicaciones:
+
+Iluminación en lámparas de escritorio, vitrinas, apliques de pared y techos.
+Bajo consumo de energía con una vida útil de hasta 25,000 horas.
+No genera calor excesivo, mejorando la seguridad.
+<br>
+<br>
+4️⃣ Reutilización y Reciclaje:
+Reutilización en lámparas compatibles tras revisiones técnicas.
+Separación de materiales: el vidrio y el aluminio pueden reciclarse.
+<br>
+<br>
+♻️ Menos residuos, menor impacto ambiental y un modelo de negocio más sostenible basado en la reutilización y el reciclaje.
+
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -289,7 +436,30 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  Bombilla de 20W con tecnología LED para espacios muy grandes, con una gran eficiencia energética.
+                  1️⃣ Diseño y Desarrollo: Fabricada con materiales reciclables como vidrio y aluminio.
+Tecnología LED de alta eficiencia energética, consumiendo solo 3W.
+Diseño compacto y sin mercurio, reduciendo impacto ambiental.
+<br>
+<br>
+2️⃣ Fabricación: Uso eficiente de materiales para minimizar residuos.
+Menos emisiones de CO₂ en comparación con bombillas tradicionales.
+Producción optimizada para menor consumo energético.
+<br>
+<br>
+3️⃣ Uso y Aplicaciones:
+
+Iluminación en lámparas de escritorio, vitrinas, apliques de pared y techos.
+Bajo consumo de energía con una vida útil de hasta 25,000 horas.
+No genera calor excesivo, mejorando la seguridad.
+<br>
+<br>
+4️⃣ Reutilización y Reciclaje:
+Reutilización en lámparas compatibles tras revisiones técnicas.
+Separación de materiales: el vidrio y el aluminio pueden reciclarse.
+<br>
+<br>
+♻️ Menos residuos, menor impacto ambiental y un modelo de negocio más sostenible basado en la reutilización y el reciclaje.
+
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -324,7 +494,30 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  Bombilla de 20W con tecnología LED para espacios muy grandes, con una gran eficiencia energética.
+                  1️⃣ Diseño y Desarrollo: Fabricada con materiales reciclables como vidrio y aluminio.
+Tecnología LED de alta eficiencia energética, consumiendo solo 3W.
+Diseño compacto y sin mercurio, reduciendo impacto ambiental.
+<br>
+<br>
+2️⃣ Fabricación: Uso eficiente de materiales para minimizar residuos.
+Menos emisiones de CO₂ en comparación con bombillas tradicionales.
+Producción optimizada para menor consumo energético.
+<br>
+<br>
+3️⃣ Uso y Aplicaciones:
+
+Iluminación en lámparas de escritorio, vitrinas, apliques de pared y techos.
+Bajo consumo de energía con una vida útil de hasta 25,000 horas.
+No genera calor excesivo, mejorando la seguridad.
+<br>
+<br>
+4️⃣ Reutilización y Reciclaje:
+Reutilización en lámparas compatibles tras revisiones técnicas.
+Separación de materiales: el vidrio y el aluminio pueden reciclarse.
+<br>
+<br>
+♻️ Menos residuos, menor impacto ambiental y un modelo de negocio más sostenible basado en la reutilización y el reciclaje.
+
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -359,7 +552,30 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  Bombilla de 20W con tecnología LED para espacios muy grandes, con una gran eficiencia energética.
+                  1️⃣ Diseño y Desarrollo: Fabricada con materiales reciclables como vidrio y aluminio.
+Tecnología LED de alta eficiencia energética, consumiendo solo 3W.
+Diseño compacto y sin mercurio, reduciendo impacto ambiental.
+<br>
+<br>
+2️⃣ Fabricación: Uso eficiente de materiales para minimizar residuos.
+Menos emisiones de CO₂ en comparación con bombillas tradicionales.
+Producción optimizada para menor consumo energético.
+<br>
+<br>
+3️⃣ Uso y Aplicaciones:
+
+Iluminación en lámparas de escritorio, vitrinas, apliques de pared y techos.
+Bajo consumo de energía con una vida útil de hasta 25,000 horas.
+No genera calor excesivo, mejorando la seguridad.
+<br>
+<br>
+4️⃣ Reutilización y Reciclaje:
+Reutilización en lámparas compatibles tras revisiones técnicas.
+Separación de materiales: el vidrio y el aluminio pueden reciclarse.
+<br>
+<br>
+♻️ Menos residuos, menor impacto ambiental y un modelo de negocio más sostenible basado en la reutilización y el reciclaje.
+
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -394,7 +610,30 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  Bombilla de 20W con tecnología LED para espacios muy grandes, con una gran eficiencia energética.
+                  1️⃣ Diseño y Desarrollo: Fabricada con materiales reciclables como vidrio y aluminio.
+Tecnología LED de alta eficiencia energética, consumiendo solo 3W.
+Diseño compacto y sin mercurio, reduciendo impacto ambiental.
+<br>
+<br>
+2️⃣ Fabricación: Uso eficiente de materiales para minimizar residuos.
+Menos emisiones de CO₂ en comparación con bombillas tradicionales.
+Producción optimizada para menor consumo energético.
+<br>
+<br>
+3️⃣ Uso y Aplicaciones:
+
+Iluminación en lámparas de escritorio, vitrinas, apliques de pared y techos.
+Bajo consumo de energía con una vida útil de hasta 25,000 horas.
+No genera calor excesivo, mejorando la seguridad.
+<br>
+<br>
+4️⃣ Reutilización y Reciclaje:
+Reutilización en lámparas compatibles tras revisiones técnicas.
+Separación de materiales: el vidrio y el aluminio pueden reciclarse.
+<br>
+<br>
+♻️ Menos residuos, menor impacto ambiental y un modelo de negocio más sostenible basado en la reutilización y el reciclaje.
+
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
