--- a/html/promociones.html
+++ b/html/promociones.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reventa de Bombillas - Promociones</title>
+  <title>Iberdrola - Promociones</title>
   <link rel="stylesheet" href="../css/stylepromocion.css">
   <link rel="shortcut icon" href="../img/icono.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -115,7 +115,7 @@
           <h3>Pack 2x1 en Bombillas Solares</h3>
           <p>Aprovecha nuestra oferta y paga solo una por la compra de dos.</p>
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#promo1Modal">
-            Más Info
+            Más Información
           </button>
         </div>
       </div>
@@ -127,7 +127,7 @@
           <h3>30% de descuento en Bombillas LED</h3>
           <p>Ahorra energía y dinero con nuestra oferta especial.</p>
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#promo2Modal">
-            Más Info
+            Más Información
           </button>
         </div>
       </div>
@@ -139,7 +139,7 @@
           <h3>20% de descuento en Bombillas Inteligentes</h3>
           <p>Descubre tecnología avanzada para el control de iluminación en tu hogar.</p>
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#promo3Modal">
-            Más Info
+            Más Información
           </button>
         </div>
       </div>
@@ -152,68 +152,78 @@
     <p>&copy; 2025 Iberdrola Clientes S.A.U. Todos los derechos reservados.</p>
   </footer>
 
-  <!-- Modal Promoción 1 -->
-  <div class="modal fade" id="promo1Modal" tabindex="-1" aria-labelledby="promo1ModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="promo1ModalLabel">Pack 2x1 en Bombillas Solares</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-        </div>
-        <div class="modal-body">
-          <img src="../img/bombilla_03W.png" class="img-fluid mb-3" alt="Bombilla Solar">
-          <p>Estas bombillas solares aprovechan la energía natural para iluminar tus espacios exteriores. Compra 2 y solo paga 1.</p>
-          <p>Incluye garantía extendida y asistencia técnica gratuita durante 1 año.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-success">Comprar Ahora</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        </div>
+<!-- Modal Promoción 1 -->
+<div class="modal fade" id="promo1Modal" tabindex="-1" aria-labelledby="promo1ModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="promo1ModalLabel">Pack 2x1 en Bombillas Solares</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <img src="../img/bombilla_03W.png" class="img-fluid mb-3" alt="Bombilla Solar">
+        <p>Estas bombillas solares aprovechan la energía natural para iluminar tus espacios exteriores. Compra 2 y solo paga 1.</p>
+        <p>Incluye garantía extendida y asistencia técnica gratuita durante 1 año.</p>
+      </div>
+      <div class="modal-footer">
+        <!-- Botón "Comprar Ahora" con redirección -->
+        <button type="button" class="btn btn-success" onclick="window.location.href='https://www.webmatel.es/bombilla-led-g9-230v-3w-plana-fria-calida-neutra'">
+          Comprar Ahora
+        </button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- Modal Promoción 2 -->
-  <div class="modal fade" id="promo2Modal" tabindex="-1" aria-labelledby="promo2ModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="promo2ModalLabel">30% de descuento en Bombillas LED</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-        </div>
-        <div class="modal-body">
-          <img src="../img/bombilla_08W.png" class="img-fluid mb-3" alt="Bombilla LED">
-          <p>Disfruta de una iluminación de alta eficiencia con nuestras bombillas LED. Ahorra energía y reduce tu consumo eléctrico.</p>
-          <p>Incluye opción de programación inteligente y compatibilidad con dispositivos IoT.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-success">Comprar Ahora</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        </div>
+<!-- Modal Promoción 2 -->
+<div class="modal fade" id="promo2Modal" tabindex="-1" aria-labelledby="promo2ModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="promo2ModalLabel">30% de descuento en Bombillas LED</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <img src="../img/bombilla_08W.png" class="img-fluid mb-3" alt="Bombilla LED">
+        <p>Disfruta de una iluminación de alta eficiencia con nuestras bombillas LED. Ahorra energía y reduce tu consumo eléctrico.</p>
+        <p>Incluye opción de programación inteligente y compatibilidad con dispositivos IoT.</p>
+      </div>
+      <div class="modal-footer">
+        <!-- Botón "Comprar Ahora" con redirección -->
+        <button type="button" class="btn btn-success" onclick="window.location.href='https://ledscome.com/inicio/319-bombilla-edison-vintage-bombilla-led-e27-filamento-8w-st64-bombilla-decorativa.html'">
+          Comprar Ahora
+        </button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- Modal Promoción 3 -->
-  <div class="modal fade" id="promo3Modal" tabindex="-1" aria-labelledby="promo3ModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="promo3ModalLabel">20% de descuento en Bombillas Inteligentes</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-        </div>
-        <div class="modal-body">
-          <img src="../img/bombilla_09W.png" class="img-fluid mb-3" alt="Bombilla Inteligente">
-          <p>Adquiere la última tecnología en iluminación inteligente y controla tus bombillas mediante smartphone o voz.</p>
-          <p>Aprovecha el 20% de descuento para transformar tu hogar.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-success">Comprar Ahora</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        </div>
+<!-- Modal Promoción 3 -->
+<div class="modal fade" id="promo3Modal" tabindex="-1" aria-labelledby="promo3ModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="promo3ModalLabel">20% de descuento en Bombillas Inteligentes</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <img src="../img/bombilla_09W.png" class="img-fluid mb-3" alt="Bombilla Inteligente">
+        <p>Adquiere la última tecnología en iluminación inteligente y controla tus bombillas mediante smartphone o voz.</p>
+        <p>Aprovecha el 20% de descuento para transformar tu hogar.</p>
+      </div>
+      <div class="modal-footer">
+        <!-- Botón "Comprar Ahora" con redirección -->
+        <button type="button" class="btn btn-success" onclick="window.location.href='https://spanish.alibaba.com/product-detail/9W-WiFi-Smart-Light-Bulb-E27-1600382214065.html'">
+          Comprar Ahora
+        </button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
       </div>
     </div>
   </div>
+</div>
+
 
   <!-- Bootstrap JS y dependencias -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
